--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,12 @@ services:
     image: postgres
     env_file:
       - config/database.env
+  testdb:
+    # use latest official postgres version
+    image: postgres
+    env_file:
+      - config/database.test.env
+
     # persist data even if container shuts down
     volumes:
       - postgres-data:/var/lib/postgresql/data
